log
Thu 09 Mar 2023 04:15:20 PM UTC: 
 tests:  0|7
total_score: 0/70
8bdf954
Fri 10 Mar 2023 03:30:00 AM UTC: 
 tests:  0|7
total_score: 0/70
4502d1c
Sun 12 Mar 2023 12:05:30 AM UTC: 
 tests:  0|7
total_score: 0/70
ed992b7
Sun 12 Mar 2023 12:37:02 AM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
c1e53b8
Sun 12 Mar 2023 12:53:43 AM UTC: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
d66cdc7
Sun 12 Mar 2023 02:10:35 AM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
8d5106a
Thu 16 Mar 2023 03:51:25 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:85:22: error: assignment to ‘int *’ from incompatible pointer type ‘Vector *’ [-Werror=incompatible-pointer-types]
   85 |   vectortmp -> datos = (Vector *) malloc(n * sizeof(Vector));
      |                      ^
exercises.c:86:6: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   86 |   if(vectortmp = NULL) return NULL;
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7b2170d
Thu 16 Mar 2023 03:51:44 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:86:6: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   86 |   if(vectortmp = NULL) return NULL;
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c87e11f
Thu 16 Mar 2023 03:52:35 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from /nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/time.h:29,
                 from test.c:4:
exercises.c: In function ‘crearVector’:
exercises.c:86:19: error: incompatible types when assigning to type ‘Vector’ from type ‘void *’
   86 |   if(*vectortmp = NULL) return NULL;
      |                   ^~~~
Compilation failed
c7b8414
